<resources>
    <string name="app_name">Apellai</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text"> </string>
    <string name="dummy_number"> </string>
    <string name="recently_added">Recently added</string>
    <string name="random">Suggested for you</string>
    <string name="recently_played">Recently played</string>
    <string name="loved_albums">Albums you loved</string>
    <string name="most_played">On repeat</string>
    <string name="search_hint">Search for you music</string>
    <string name="artist_releases">Releases</string>
    <string name="server_address">Server Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Shows the currently playing track.</string>
    <string name="artist">Artists</string>
    <string name="album">Albums</string>
    <string name="track">Tracks</string>
    <string name="logout">Logout</string>

    <string-array name="spinner_library_array">
        <item>@string/artist</item>
        <item>@string/album</item>
    </string-array>
</resources>