<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.magentagang.apellai.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_albumScreen"
            app:destination="@id/albumScreen"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.magentagang.apellai.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_albumScreen"
            app:destination="@id/albumScreen" />
        <action
            android:id="@+id/action_navigation_search_to_artistScreen"
            app:destination="@id/artistScreen" />
        <action
            android:id="@+id/action_navigation_search_to_nowPlaying"
            app:destination="@id/nowPlaying" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.magentagang.apellai.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_albumScreen"
            app:destination="@id/albumScreen"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_library_to_artistScreen"
            app:destination="@id/artistScreen"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/albumScreen"
        android:name="com.magentagang.apellai.ui.albumscreen.AlbumScreen"
        android:label="AlbumScreen" >
        <argument
            android:name="id"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_albumScreen_to_nowPlaying"
            app:destination="@id/nowPlaying"
            app:enterAnim="@anim/pop_in_up"
            app:exitAnim="@anim/pop_in_down"
            app:popEnterAnim="@anim/pop_out_up"
            app:popExitAnim="@anim/pop_out_down" />
    </fragment>
    <fragment
        android:id="@+id/artistScreen"
        android:name="com.magentagang.apellai.ui.artistscreen.ArtistScreen"
        android:label="ArtistScreen" >
        <argument
            android:name="id"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_artistScreen_to_albumScreen"
            app:destination="@id/albumScreen"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/nowPlaying"
        android:name="com.magentagang.apellai.ui.nowplayingscreen.NowPlaying"
        android:label="NowPlaying" >
        <argument
            android:name="id"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <action
        android:id="@+id/action_nowPlayingMini_to_nowPlaying"
        app:destination="@id/nowPlaying"
        app:enterAnim="@anim/pop_in_up"
        app:exitAnim="@anim/pop_in_down"
        app:popEnterAnim="@anim/pop_out_up"
        app:popExitAnim="@anim/pop_out_down" />
</navigation>